--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,13 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation "com.google.dagger:dagger:2.41"
+    implementation "com.google.dagger:dagger-android:2.41"
+    implementation "com.google.dagger:dagger-android-support:2.41"
+    implementation "com.google.dagger:dagger-compiler:2.41"
+    implementation "com.google.dagger:dagger-android-processor:2.41"
+
+     'android.suppressUnsupportedCompileSdk=33'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
 }
